--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.23.1",
+    "@nuxtjs/vuetify": "^1.12.3",
     "core-js": "^3.15.1",
     "firebase": "^9.5.0",
     "nuxt": "^2.15.7",
@@ -22,13 +22,16 @@
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "fibers": "^5.0.0",
+    "postcss": "^8.4.27",
     "prettier": "^2.3.2",
     "sass": "^1.43.4",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "tailwindcss": "^3.3.3"
   }
 }
